--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ httpcore==1.0.5
 httpx==0.27.0
 idna==3.6
 openai==1.16.2
+pillow==10.3.0
 playsound==1.3.0
 PyAudio==0.2.14
 pydantic==2.6.4
@@ -167,9 +168,11 @@ pyobjc-framework-Vision==10.2
 pyobjc-framework-WebKit==10.2
 requests==2.31.0
 setuptools==69.2.0
+six==1.16.0
 sniffio==1.3.1
 SpeechRecognition==3.10.3
 tqdm==4.66.2
 typing_extensions==4.11.0
 urllib3==2.2.1
 websockets==12.0
+wxPython==4.2.1
